# filed-ai-assignment

./: .gitignore  README.md  Solution_2.ipynb  Solution_2_server.py  all_extracted_text_filtered.txt  corrected_function_for_notebook.py  env_template.txt  fixed_pdf_classifier.py  improved_pdf_classifier.py  main.py  pdf_extractor.py  pyproject.toml  requirements.txt  test_1.ipynb  test_security_features.py  test_server.py  tests.ipynb  vercel.json
blocks_output/Morris_Simons_CV_EN /: page_1.json
blocks_output/f1040--2022/: page_1.json  page_2.json
blocks_output/f1098/: page_1.json
blocks_output/f1099div/: page_1.json
blocks_output/f1099div-2031/: page_1.json
blocks_output/f1099int/: page_1.json
blocks_output/fw2/: page_1.json  page_2.json
blocks_output/handwritten/: page_1.json
blocks_output/idcard/: page_1.json
static/css/: style.css
static/js/: drop.js
templates/: drop.html
