[project]
name = "classifier-assignment"
version = "0.1.0"
description = "Classifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "fastapi>=0.115.12",
   "python-multipart>=0.0.20",
   "uvicorn>=0.34.2",
   "PyMuPDF>=1.23.0",
   "pdf2image>=1.16.0",
   "Pillow>=10.0.0",
   "python-dotenv>=1.0.0",
   "google-cloud-documentai>=2.20.0",
   "openai>=1.0.0",
   "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
